==================================== ******** =================================================================================================================
				      2.2.2 - Update
==================================== ******** =================================================================================================================
- Patched an issue where the mod was not automatically refreshing players' asset calculations.
==================================== ******** =================================================================================================================
				      2.2.1 - Your X Game ~ Your Rules
==================================== ******** =================================================================================================================
- Further improvements to the mod menus, and other related features that are not yet implemented in the mod menu for this update.
- API Menu and its elements have the possibility to be dynamic. Implemented this for most settings improving settings customization and accessibility.
- Most of the mod settings may be change dynamically without further limitations, bending the experience provided by Reactive Factions Retribution to individual players needs.

==================================== ******** =================================================================================================================
				      2.2.0 - Support for X4 7.0 
==================================== ******** =================================================================================================================
- The bug with missing event faction check against the ignore list, which could potentially cause issues has been fixed.