@@ -1,7 +1,12 @@
 ==================================== ******** =================================================================================================================
+				      2.2.3 - Fix
+==================================== ******** =================================================================================================================
+- Fixed an issue which stopped applying bonuses and penalties for the rep change event.  
+==================================== ******** =================================================================================================================
 				      2.2.2 - Update
 ==================================== ******** =================================================================================================================
 - Patched an issue where the mod was not automatically refreshing players' asset calculations.
+
 ==================================== ******** =================================================================================================================
 				      2.2.1 - Your X Game ~ Your Rules
 ==================================== ******** =================================================================================================================
